# OpenMower

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Changelog.md  OpenMowerMainboard-navigate.html  OpenMowerMainboard-navigate_Compress.html  OpenMowerMainboard-navigate_PCB.html  OpenMowerMainboard-navigate_PCB_3D.html  OpenMowerMainboard-navigate_PCB_docs.html  OpenMowerMainboard-navigate_PCB_fabrication.html  OpenMowerMainboard-navigate_PCB_fabrication_assembly.html  OpenMowerMainboard-navigate_PCB_fabrication_drill.html  OpenMowerMainboard-navigate_PCB_fabrication_gerber.html  OpenMowerMainboard-navigate_Schematic.html  OpenMowerMainboard-navigate_Schematic_BoM.html  OpenMowerMainboard-navigate_Schematic_docs.html  README.md  index.html  map.bag  output.bag
Firmware/CoverUI/CoverUI/: BttnCtl.h  CMakeLists.txt  COBS.h  LED_mux.pio  LEDcontrol.cpp  LEDcontrol.h  buttonscan.cpp  buttonscan.h  buzzer.pio  main.cpp  pico_sdk_import.cmake  platformio.ini  statemachine.cpp  statemachine.h  status_LED.pio  stm32f0xx_hal_msp.c  stm32f0xx_it.c  system_stm32f0xx.c
Firmware/CoverUI/CoverUI/include/: stm32f0xx_error.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h  stm32f0xx_main.h  stm32f0xx_mx_gpio.hpp  stm32f0xx_sysclock.hpp
Firmware/CoverUI/CoverUI/util/: openocd-picoprobe.cfg  semihosting.py
Firmware/CoverUI/CoverUI/yfc500/: ButtonDebouncer.cpp  ButtonDebouncer.h  Buttons.cpp  Buttons.h  LED.cpp  LED.h  LEDcontrol.cpp  LEDcontrol.h  error.hpp  gpio.h  main.h  main.hpp  ring_buffer.hpp  stm32f0xx_hal_conf.h  stm32f0xx_hal_msp.c  stm32f0xx_it.c  stm32f0xx_it.h  usart.c  (+2 more)
(+311 files in other folders)
